--- a/src/translations/compiled/ja.json
+++ b/src/translations/compiled/ja.json
@@ -35,6 +35,12 @@
       "value": "キャンセル"
     }
   ],
+  "4l6vz1": [
+    {
+      "type": 0,
+      "value": "コピー"
+    }
+  ],
   "5929Xm": [
     {
       "type": 0,
@@ -171,6 +177,12 @@
     {
       "type": 0,
       "value": "バージョン"
+    }
+  ],
+  "JBWS0c": [
+    {
+      "type": 0,
+      "value": "リンク"
     }
   ],
   "JEsxDw": [
@@ -377,6 +389,12 @@
       "value": "フォルダー名"
     }
   ],
+  "lbr3Lq": [
+    {
+      "type": 0,
+      "value": "リンクのコピー"
+    }
+  ],
   "mJN/zn": [
     {
       "type": 0,
@@ -483,6 +501,12 @@
     {
       "type": 0,
       "value": "ここにファイルをドラッグ アンド ドロップ"
+    }
+  ],
+  "zU/q1N": [
+    {
+      "type": 0,
+      "value": "リンクをコピーしました"
     }
   ]
 }
