--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -5,6 +5,7 @@
   "14KiwR": "There is nothing here",
   "3cc4Ct": "Light",
   "47FYwb": "Cancel",
+  "4l6vz1": "Copy",
   "5929Xm": "Change theme",
   "5KHmz1": "Minimap",
   "5q3qC0": "Download",
@@ -28,6 +29,7 @@
   "HKsvaG": "Hide other files",
   "HjkLKL": "Unsupported file format",
   "I3b4hn": "Version",
+  "JBWS0c": "Link",
   "JEsxDw": "Uploading...",
   "JqiqNj": "Something went wrong",
   "LYCry0": "Conflict file",
@@ -62,6 +64,7 @@
   "jvo0vs": "Save",
   "kAEQyV": "OK",
   "lR/7o8": "Folder name",
+  "lbr3Lq": "Copy link",
   "mJN/zn": "Explorer",
   "oUWADl": "No",
   "olfaAj": "The file with the name does not exists",
@@ -79,5 +82,6 @@
   "xXbJso": "Sign out",
   "xhRkpH": "Word wrap",
   "xmcVZ0": "Search",
-  "xyET3x": "Drag and drop files here"
+  "xyET3x": "Drag and drop files here",
+  "zU/q1N": "Link copied"
 }
