--- a/src/translations/ja.json
+++ b/src/translations/ja.json
@@ -5,6 +5,7 @@
   "14KiwR": "ここには何もありません",
   "3cc4Ct": "ライト",
   "47FYwb": "キャンセル",
+  "4l6vz1": "コピー",
   "5929Xm": "外観の変更",
   "5KHmz1": "ミニマップ",
   "5q3qC0": "ダウンロード",
@@ -28,6 +29,7 @@
   "HKsvaG": "その他のファイルを非表示",
   "HjkLKL": "サポートされていないファイル形式です",
   "I3b4hn": "バージョン",
+  "JBWS0c": "リンク",
   "JEsxDw": "アップロードしています...",
   "JqiqNj": "問題が発生しました",
   "LYCry0": "ファイルが競合しています",
@@ -62,6 +64,7 @@
   "jvo0vs": "保存",
   "kAEQyV": "OK",
   "lR/7o8": "フォルダー名",
+  "lbr3Lq": "リンクのコピー",
   "mJN/zn": "エクスプローラー",
   "oUWADl": "いいえ",
   "olfaAj": "指定した名前のファイルは存在しません",
@@ -79,5 +82,6 @@
   "xXbJso": "サインアウト",
   "xhRkpH": "行の折り返し",
   "xmcVZ0": "検索",
-  "xyET3x": "ここにファイルをドラッグ アンド ドロップ"
+  "xyET3x": "ここにファイルをドラッグ アンド ドロップ",
+  "zU/q1N": "リンクをコピーしました"
 }
