--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -9,7 +9,6 @@
   "5929Xm": "Change theme",
   "5KHmz1": "Minimap",
   "5q3qC0": "Download",
-  "6qF/vN": "Terms and Conditions",
   "6tm4ZV": "What is Hitofude?",
   "7BAvD0": "Show other files",
   "7DoGdQ": "Hitofude",
@@ -36,6 +35,7 @@
   "M0iO6Z": "Delete folder",
   "OijyGx": "We can't find the page you're looking for",
   "QRccCM": "Page not found",
+  "QdINaw": "https://github.com/karamem0/hitofude",
   "RolcOL": "Only runs client JavaScript, no server code is executed.",
   "SOtMvF": "Underline",
   "TDaF6J": "Dismiss",
@@ -43,11 +43,13 @@
   "TNqh3Y": "A web application that enables to you to write Markdown file via OneDrive (Personal, work or school).",
   "TiR/Hq": "Saving...",
   "TkEsoc": "Version history",
+  "UhkSyx": "Terms of Use",
   "VCHJad": "New folder",
   "Vb7Qzm": "The folder with the name does not exists",
   "VcZRoJ": "Rename file",
   "VlCOJS": "The file with the name already exists",
   "WSCjCg": "No items found",
+  "WjC3Vn": "https://github.com/karamem0/hitofude/blob/main/TERMS_OF_USE.md",
   "Z5spcL": "Please try refreshing your browser",
   "a5msuh": "Yes",
   "agOXPD": "Size",
@@ -73,6 +75,7 @@
   "ppAn7O": "File name",
   "rELDbB": "Refresh",
   "rbrahO": "Close",
+  "rvyU8S": "https://github.com/karamem0/hitofude/blob/main/PRIVACY_POLICY.md",
   "sQtSD2": "Are you sure to delete this file?",
   "tOdNiY": "Dark",
   "utNSND": "Select working directory",
