--- a/src/translations/ja.json
+++ b/src/translations/ja.json
@@ -9,7 +9,6 @@
   "5929Xm": "外観の変更",
   "5KHmz1": "ミニマップ",
   "5q3qC0": "ダウンロード",
-  "6qF/vN": "利用規約",
   "6tm4ZV": "Hitofude とは？",
   "7BAvD0": "その他のファイルを表示",
   "7DoGdQ": "Hitofude",
@@ -36,6 +35,7 @@
   "M0iO6Z": "フォルダーの削除",
   "OijyGx": "お探しのページを見つけることができませんでした",
   "QRccCM": "ページが見つかりません",
+  "QdINaw": "https://github.com/karamem0/hitofude",
   "RolcOL": "クライアントの JavaScript コードのみで動作し、サーバーのコードを含みません。",
   "SOtMvF": "下線",
   "TDaF6J": "閉じる",
@@ -43,11 +43,13 @@
   "TNqh3Y": "OneDrive (個人、職場または学校) で Markdown ファイルを書くための Web アプリケーションです。",
   "TiR/Hq": "保存しています...",
   "TkEsoc": "バージョン履歴",
+  "UhkSyx": "利用規約",
   "VCHJad": "新しいフォルダー",
   "Vb7Qzm": "指定した名前のフォルダーは存在しません",
   "VcZRoJ": "ファイル名の変更",
   "VlCOJS": "指定した名前のファイルはすでに存在します",
   "WSCjCg": "アイテムが見つかりません",
+  "WjC3Vn": "https://github.com/karamem0/hitofude/blob/main/TERMS_OF_USE.ja-jp.md",
   "Z5spcL": "お使いのブラウザーを更新してください",
   "a5msuh": "はい",
   "agOXPD": "サイズ",
@@ -73,6 +75,7 @@
   "ppAn7O": "ファイル名",
   "rELDbB": "最新の状態に更新",
   "rbrahO": "閉じる",
+  "rvyU8S": "https://github.com/karamem0/hitofude/blob/main/PRIVACY_POLICY.ja-jp.md",
   "sQtSD2": "ファイルを削除します。よろしいですか？",
   "tOdNiY": "ダーク",
   "utNSND": "作業ディレクトリの選択",
