--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -77,6 +77,7 @@
   "rbrahO": "Close",
   "rvyU8S": "https://github.com/karamem0/hitofude/blob/main/PRIVACY_POLICY.md",
   "sQtSD2": "Are you sure to delete this file?",
+  "t1Ql7Y": "Footnotes",
   "tOdNiY": "Dark",
   "utNSND": "Select working directory",
   "vx0nkZ": "Privacy Policy",
