--- a/src/translations/compiled/en.json
+++ b/src/translations/compiled/en.json
@@ -407,6 +407,12 @@
       "value": "Copy link"
     }
   ],
+  "m3XnvJ": [
+    {
+      "type": 0,
+      "value": "karamem0"
+    }
+  ],
   "mJN/zn": [
     {
       "type": 0,
