--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -67,6 +67,7 @@
   "kAEQyV": "OK",
   "lR/7o8": "Folder name",
   "lbr3Lq": "Copy link",
+  "m3XnvJ": "karamem0",
   "mJN/zn": "Explorer",
   "oUWADl": "No",
   "olfaAj": "The file with the name does not exists",
