--- a/src/translations/ja.json
+++ b/src/translations/ja.json
@@ -67,6 +67,7 @@
   "kAEQyV": "OK",
   "lR/7o8": "フォルダー名",
   "lbr3Lq": "リンクのコピー",
+  "m3XnvJ": "karamem0",
   "mJN/zn": "エクスプローラー",
   "oUWADl": "いいえ",
   "olfaAj": "指定した名前のファイルは存在しません",
